Address code review: use StandardCharsets and extract helper method
- Replace string literal "UTF-8" with StandardCharsets.UTF_8
- Extract removeJarSeparator helper method to reduce duplication
- Improve code maintainability and follow Java best practices

Co-authored-by: Skidamek <67871298+Skidamek@users.noreply.github.com>